@@ -1,3 +1,7 @@
+=== git
+
+* Make Rails 3 - compatible by removing RAILS_ROOT and RAILS_ENV
+
 === 1.1.5 / 2010-06-02
 
 * test support for call guid/call status
